--- a/index.html
+++ b/index.html
@@ -8,19 +8,10 @@
 </head>
 <body>
     <script>
-        let array = [1,2,3]
-        function incrementarPorUno(array) {
-            let nuevoArray = []
-            for (numero of array)
-            {   
-                numero++;
-                nuevoArray.push(numero)
-                
-            }
-            console.log(nuevoArray) 
-            return nuevoArray
-        }
-        incrementarPorUno(array)
+      var arr_1 = ['Google', 'is', 'no', '1', 'search engine'].join();
+      console.log(arr_1)
+      let arr2 = arr_1.replaceAll("," , " ")
+      console.log(arr2)
     </script>
 </body>
 </html>
