--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <script>
-      var arr_1 = ['Google', 'is', 'no', '1', 'search engine'].join();
-      console.log(arr_1)
-      let arr2 = arr_1.replaceAll("," , " ")
-      console.log(arr2)
+      /* function fun (numero)
+      {
+        let numeroString = numero.toString()
+        console.log(numeroString)
+        let nuevoNumero = numeroString.chartAt(0)
+        console.log(nuevoNumero)
+    
+      }
+
+      fun(999) */
+      function casa ()
+      {
+      let numero = 50;
+      let numerostring = numero.toString()
+      let final = numerostring.charAt(0)
+      console.log(final) }
+      casa()
     </script>
 </body>
 </html>
